Stream BAM files when generating DropSeq reports (#543)